--- a/src/styles/discover.module.css
+++ b/src/styles/discover.module.css
@@ -62,7 +62,7 @@
     background-image: url('../assets/event.jpg');
 }
 #lifestyle{
-    background-image: url('../lifestyleGallery/i7.jpg');
+    background-image: url('../lifestyleGallery/I7.jpg');
 }
 #video{
     background-image: url('../assets/video.jpg');
