--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -13,6 +13,7 @@
     border-radius: 5px;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
 }
 .container h3, .container p{
     color: var(--backgroundclr);
@@ -29,16 +30,25 @@
     width: 50%;
     margin-left: 5%;
 }
-.leftSide{
-    width: 100%;
-}
 .image{
     width: 120px;
     height: 120px;
     margin-right: 25%;
     transition: all 0.3s ease-out;
     filter: var(--filter);
-
+}
+.leftSide{
+    width: 80%;
+    padding: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
+}
+.leftSide svg{
+    color: black;
+    font-size: 30px;
+    padding: 5px;
 }
 @media only screen and (max-width: 800px){
     .footermain{ 
