--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,6 +12,7 @@ html{
 body{
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 100%;
   background: black;
   font-family: "Raleway", sans-serif;
