--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,7 +13,9 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
+  justify-content: center;
+  height: 100%;
+  width: 100vw;
   background: black;
   font-family: "Raleway", sans-serif;
   color: var(--contrastclr);
